src/snapshots/ruuvi_decoders__v6__tests__valid.snap
---
source: src/v6.rs
expression: res
---
DataFormatV6 {
    temperature: Some(
        29.5,
    ),
    humidity: Some(
        55.300000000000004,
    ),
    pressure: Some(
        1011.02,
    ),
    pm2_5: Some(
        11.200000000000001,
    ),
    co2: Some(
        201,
    ),
    voc_index: Some(
        10,
    ),
    nox_index: Some(
        2,
    ),
    luminosity: Some(
        13026.668900127113,
    ),
    reserved: Some(
        255,
    ),
    measurement_sequence: Some(
        205,
    ),
    flags: 0,
    mac_address: "4c884f",
}
